# STRIDER

./: .gitignore  MUJOCO_LOG.TXT  README.md
install/: local_setup.sh  setup.sh
install/allocator/include/: allocator_worker.hpp
install/allocator/lib/allocator/: allocator_worker
install/allocator/share/allocator/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/allocator/share/allocator/cmake/: allocatorConfig.cmake
install/allocator_interfaces/share/allocator_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/allocator_interfaces/share/allocator_interfaces/cmake/: allocator_interfaces__rosidl_typesupport_cExport-noconfig.cmake  allocator_interfaces__rosidl_typesupport_cExport.cmake  allocator_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  allocator_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  allocator_interfaces__rosidl_typesupport_introspection_cppExport.cmake  (+7 more)
install/controller/include/: controller_worker.hpp
install/controller/share/controller/: local_setup.sh  package.sh  package.xml
install/controller_interfaces/share/controller_interfaces/: local_setup.sh  package.sh
install/dynamixel_worker/lib/dynamixel_worker/: dynamixel_worker
install/dynamixel_worker/share/dynamixel_worker/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/imu_interfaces/share/imu_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/imu_worker/lib/imu_worker/: imu_worker
install/imu_worker/share/imu_worker/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/launch_manager/share/launch_manager/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mocap/lib/mocap/: mocap_worker
install/mocap/share/mocap/: package.bash  package.ps1  package.sh  package.zsh
install/mocap_interfaces/share/mocap_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pid_debugger/lib/pid_debugger/: pid_debugger
install/pid_debugger/share/pid_debugger/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sbus_interfaces/share/sbus_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sbus_receiver/include/: sbus_worker.hpp
install/sbus_receiver/lib/sbus_receiver/: sbus_worker
install/sbus_receiver/share/sbus_receiver/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/teensy_sender/include/: teensy_worker.hpp
install/teensy_sender/share/teensy_sender/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/watchdog_interfaces/share/watchdog_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/watchdog_manager/lib/watchdog_manager/: watchdog_worker
install/watchdog_manager/share/watchdog_manager/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: MUJOCO_LOG.TXT
src/Allocator/allocator/include/: allocator_worker.hpp
src/Allocator/allocator/src/: allocator_worker.cpp
src/Arm_changer/include/: arm_changer.hpp
src/Controller/controller/: CMakeLists.txt
src/Controller/controller/include/: controller_worker.hpp
src/Controller/controller/src/: controller_worker.cpp
src/Controller/controller_geom/include/: controller_param.h
src/Controller/controller_geom/src/: controller_worker.cpp
src/Controller/controller_interfaces/msg/: ControllerOutput.msg
src/Dynamixel/dynamixel_worker/src/: dynamixel_worker.cpp
src/IMU/imu_interfaces/msg/: ImuMeasured.msg
src/IMU/imu_worker/: CMakeLists.txt  package.xml
src/IMU/imu_worker/include/: imu_worker.hpp
src/IMU/imu_worker/src/: imu_worker.cpp
src/Launch/launch/: launch.py  opti_launch.py
src/MoCap/mocap/: CMakeLists.txt  package.xml
src/MoCap/mocap/include/: mocap_worker.hpp
src/MoCap/mocap/src/: mocap_worker.cpp
src/Mujoco/mujoco_sim/mujoco_sim/: mujoco_sim.py
src/Mujoco/mujoco_sim/xml/: JellyFish copy.xml  JellyFish.xml
src/OptiTrack/mocap/: CMakeLists.txt  package.xml
src/OptiTrack/mocap/config/: cfg.yaml
src/OptiTrack/mocap/include/: mocap_worker.hpp
src/OptiTrack/mocap/launch/launch/: launch.py
src/OptiTrack/mocap/src/: mocap_worker.cpp  motion_capture_tracking_node.cpp
src/OptiTrack/mocap_interfaces/: CMakeLists.txt  package.xml
src/SBUS/sbus_receiver/: CMakeLists.txt
src/SBUS/sbus_receiver/src/: sbus_worker.cpp
src/Simulation/msg/: MuJoCoMeas.msg
src/Simulation/mujoco_interfaces/: package.xml
src/Simulation/mujoco_sim/: package.xml
src/Simulation/mujoco_sim/mujoco_sim/: mujoco_sim.py
src/Simulation/mujoco_sim/xml/: quadrotor.xml
src/Teensy_sender/teensy_sender/: CMakeLists.txt
src/Teensy_sender/teensy_sender/src/: teensy_worker.cpp
(+183 files in other folders)
